tests/models/struct/unnamed/struct/fail/max_items.rs
use dade::model;
#[model]
struct InnerModel;
#[model]
struct TestModel (
   #[field(max_items = 2.0)]
    InnerModel
);
fn main() {}
